--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,26 @@
 <resources>
     <string name="app_name">HedgehogLabApp</string>
+
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="general_error">"Something went wrong"</string>
+    <string name="no_connection">No Internet. Please check your connection.</string>
+    <string name="creator_name">By %1$s</string>
+    <string name="itemimage">itemImage</string>
+    <string name="addtofavouritesbtn">addToFavouritesBtn</string>
+
+    <!-- Remove Item Dialog -->
+    <string name="remove_item_title">Getting rid of this item?</string>
+    <string name="remove_item_message">Are you sure you want to remove this item from favorites?</string>
+    <!-- Remove All Items Dialog -->
+    <string name="remove_all_items_title">Tired of these items?</string>
+    <string name="remove_all_items_message">Are you sure you want to remove all the items from favorites?</string>
+
+    <!-- Dialog responses -->
+    <string name="positive_answer">Yes</string>
+    <string name="negative_answer">No</string>
+
+    <string name="item_already_liked">The item is already saved.</string>
+    <string name="item_added">Item saved.</string>
+    <string name="item_removed">Item removed.</string>
+    <string name="items_removed">Items have been removed.</string>
 </resources>
