added more tests, added additional network connectivity checks

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,7 @@
     <string name="item_added">Item saved.</string>
     <string name="item_removed">Item removed.</string>
     <string name="items_removed">Items have been removed.</string>
+    <string name="no_results_found">No results found.</string>
+    <string name="noresultsimage">noresultsimage</string>
+    <string name="galleryimage">galleryimage</string>
 </resources>
